# ParProcCo

./: .gitignore  .pydevproject  README.md  dev_requirements.txt  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
ParProcCo/: __init__.py  aggregator_interface.py  job_controller.py  job_schedling_information.py  job_scheduler.py  job_scheduling_information.py  job_slicer_interface.py  msm_processing_mode.py  nxdata_aggregation_mode.py  nxdata_aggregation_slicer.py  nxdata_aggregator.py  passthru_processing_mode.py  passthru_wrapper.py  program_wrapper.py  scheduler_mode_interface.py  simple_data_slicer.py  slicer_interface.py  utils.py
ParProcCo/models/: generate_models.py
ParProcCo/slurm/: README.md  generate_models.py  slurm_client.py  slurm_rest.py  slurmdb_rest.py
ParProcCo/test/: __init__.py
conda/: meta.yaml
example/: simple_aggregation_mode.py  simple_aggregation_slicer.py  simple_data_aggregator.py  simple_processing_mode.py  simple_processing_slicer.py  simple_wrapper.py
models/: README.md  generate_models.py  slurm_rest.py  slurmdb_rest.py
scripts/: bl_cluster_submit  msm_cluster_submit  ppc_cluster_submit
tests/: test_job_controller.py  test_job_scheduler.py  test_msm_cluster_submit.py  test_nxdata_aggregator.py  test_simple_data_aggregator.py  test_simple_data_slicer.py  utils.py
